--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
+  "proxy": "http://localhost:3001",
   "devDependencies": {
     "@testing-library/dom": "^8.1.0",
     "@testing-library/jest-dom": "^5.14.1",
