--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "devDependencies": {
     "mocha": "^9.0.3",
     "nodemon": "^2.0.12"
+  },
+  "optionalDependencies": {
+    "fsevents":"^2.3.2"
   }
 }
